fix login link align

--- a/scss/blocks/_login.scss
+++ b/scss/blocks/_login.scss
@@ -36,19 +36,19 @@
 		flex-wrap: wrap;
 		align-items: baseline;
 		margin: -8px;
-		text-align: center;
 	}
 
 	&__link-caption {
 		font-weight: 600;
 		font-size: 16px;
 		margin: 8px;
-		flex-grow: 1;
 	}
 
 	&__link {
 		margin: 8px;
-		flex-grow: 1;
+		&.btn {
+			flex-grow: 0;
+		}
 	}
 
 	&__divider {
